--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,17 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupOnly="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Maintenance"
-        android:fullBackupOnly="true">
+        android:theme="@style/Theme.Maintenance">
+        <activity
+            android:name=".ItemDetailsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_item_details"
+            android:theme="@style/Theme.Maintenance.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
