Update login screen and update method

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,14 +8,14 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.panosdim.maintenance"
         minSdk 29
-        targetSdk 33
-        versionCode 7
-        versionName '2.0'
+        targetSdk 34
+        versionCode 8
+        versionName '2.1'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -52,18 +52,18 @@ android {
 }
 
 dependencies {
-    implementation "androidx.navigation:navigation-compose:2.6.0"
-    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation "androidx.navigation:navigation-compose:2.7.4"
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.material:material:1.10.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.1.1'
+    implementation 'androidx.compose.material3:material3:1.1.2'
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.1"
-    implementation 'androidx.activity:activity-compose:1.7.2'
-    implementation 'androidx.annotation:annotation:1.6.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.2"
+    implementation 'androidx.activity:activity-compose:1.8.0'
+    implementation 'androidx.annotation:annotation:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
@@ -76,10 +76,10 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
 
     // Serialization
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0"
 
     // Firebase Dependencies
     implementation platform('com.google.firebase:firebase-bom:32.1.1')
@@ -89,9 +89,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
-    // Firebase Auth UI
-    implementation 'com.firebaseui:firebase-ui-auth:8.0.1'
-    implementation 'com.google.android.gms:play-services-auth:20.6.0'
+    // Firebase Auth
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
 
     // Android Work
     implementation 'androidx.work:work-runtime-ktx:2.8.1'
