--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,14 +23,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ItemDetailsActivity"
-            android:exported="false"
-            android:label="@string/title_activity_item_details"
-            android:theme="@style/Theme.Maintenance.NoActionBar" />
-        <activity
             android:name=".MainActivity"
-            android:exported="false"
-            android:theme="@style/Theme.Maintenance.NoActionBar" />
+            android:exported="false" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
